# sniper

./: .ai-master-ignore  .gitignore  Cargo.toml  LICENSE.md  README.md  pairs.txt
.continue/prompts/: new-prompt.md
docs/: spec.md
docs/zones/: key zones.md
kline_data/: demo_prices.json
src/: lib.rs  main.rs
src/analysis/: adaptive.rs  horizon_profiler.rs  market_state.rs  mod.rs  multi_pair_monitor.rs  pair_analysis.rs  range_gap_finder.rs  scenario_simulator.rs  selection_criteria.rs  zone_scoring.rs
src/app/: mod.rs  root.rs  state.rs  types.rs
src/app/phases/: bootstrap.rs  mod.rs  phase_view.rs  running.rs  tuning.rs
src/config/: analysis.rs  backtest.rs  binance.rs  constants.rs  debug.rs  demo.rs  mod.rs  persistence.rs  plot.rs  ticker.rs  tuner.rs  types.rs
src/data/: binance.rs  ledger_io.rs  mod.rs  pre_main_async.rs  price_stream.rs  provider.rs  rate_limiter.rs  results_repo.rs  storage.rs
src/data/timeseries/: bn_kline.rs  bnapi_version.rs  cache_file.rs  mod.rs  rate_limiter.rs  serde_version.rs  time_series_collection.rs  wasm_demo.rs
src/data/timeseries/bnapi_version/: bn_kline.rs  raw_ohlcv.rs
src/domain/: auto_duration.rs  candle.rs  mod.rs  pair_interval.rs  price_horizon.rs
src/engine/: backtest.rs  core.rs  messages.rs  mod.rs  state.rs  tuner.rs  worker.rs
src/journeys/: decay_calibration.rs  journey.rs  mod.rs  zone_efficacy.rs
src/models/: adaptive.rs  cva.rs  horizon_profile.rs  ledger.rs  market_state.rs  mod.rs  ohlcv.rs  optimization_strategy.rs  pair_analysis.rs  pair_context.rs  range_gap_finder.rs  scenario_simulator.rs  timeseries.rs  trade_opportunity.rs  trading_model.rs  trading_view.rs
src/models/tests/: mod.rs
src/ph_audit/: audit_config.rs  config.rs  mod.rs  reporter.rs  runner.rs
src/shared/: mod.rs  shared_engine_ui.rs
src/ui/: app.rs  app_async.rs  app_journeys.rs  app_simulation.rs  app_state.rs  app_triggers.rs  config.rs  mod.rs  plot_layers.rs  styles.rs  ticker.rs  time_tuner.rs  ui_config.rs  ui_panels.rs  ui_plot_view.rs  ui_render.rs  ui_text.rs  utils.rs
src/ui/screens/: bootstrap.rs  mod.rs
src/utils/: maths_utils.rs  mod.rs  perf.rs  time_utils.rs  vec_utils.rs
